--- a/Entregable1_60min.html
+++ b/Entregable1_60min.html
@@ -10,18 +10,44 @@
 
 <body>
     <script>
-        var  num;
 
-        function potencia(b,e){
-            if(e==1){
-                return b*e;
-            }else{
-                return b *potencia(b,e-1);
+        
+
+        function potencia(w,x,y,z){
+            if(arguments.length == 0) {
+                return undefined;
+
+            }else if(arguments.length == 1) {
+                return w*w;
+
+            }else if(arguments.length == 2) {
+                if(x==1) {
+                    return w * x;
+
+                }else {
+                    return w * potencia(w,x-1);
+                }
+
+            }else if(arguments.length == 3){
+                if(x==1){
+                    return w * x;
+
+                }else{
+                    return w * potencia(w,potencia(x,y)-1);
+
+                }
+
+            }else if(arguments.length == 4){
+                return `${x} + ${y} + ${potencia(w,x)} + ${z}`;
+
             }
         }
 
-        num = potencia(2,3);
-        console.log(num);
+
+        console.log(potencia(2));
+        console.log(potencia(2,3));
+        console.log(potencia(3,3,3));
+        console.log(potencia(2,2,2,2));
         
     </script>
 
