--- a/Entregable1_60min.html
+++ b/Entregable1_60min.html
@@ -11,43 +11,43 @@
 <body>
     <script>
 
-        
+        function cuadrado(x){
+            if(x%2==0){
+                return `${x} al cuadrado es ${potencia(x)} y es par`;
+            }else{
+                return `${x} al cuadrado es ${potencia(x)} y es impar`;
+            }
+
+        }
 
         function potencia(w,x,y,z){
             if(arguments.length == 0) {
                 return undefined;
-
             }else if(arguments.length == 1) {
                 return w*w;
-
             }else if(arguments.length == 2) {
                 if(x==1) {
                     return w * x;
-
                 }else {
                     return w * potencia(w,x-1);
                 }
-
             }else if(arguments.length == 3){
                 if(x==1){
                     return w * x;
-
                 }else{
                     return w * potencia(w,potencia(x,y)-1);
-
                 }
-
             }else if(arguments.length == 4){
-                return `${x} + ${y} + ${potencia(w,x)} + ${z}`;
-
+                return (w,x,y,z) => `${x} + ${y} + ${potencia(w,x)} + ${z}`;
             }
         }
 
 
         console.log(potencia(2));
         console.log(potencia(2,3));
-        console.log(potencia(3,3,3));
-        console.log(potencia(2,2,2,2));
+        console.log(potencia(2,2,2));
+        console.log(potencia(2,2,2,2)(2,2,2,2));
+        console.log(cuadrado(2));
         
     </script>
 
