--- a/Entregable1_60min.html
+++ b/Entregable1_60min.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <input type="text" id="">
+
     <script>
 
         function cuadrado(x){
@@ -21,34 +23,58 @@
         }
 
         function potencia(w,x,y,z){
-            if(arguments.length == 0) {
-                return undefined;
-            }else if(arguments.length == 1) {
-                return w*w;
-            }else if(arguments.length == 2) {
-                if(x==1) {
-                    return w * x;
-                }else {
-                    return w * potencia(w,x-1);
-                }
-            }else if(arguments.length == 3){
-                if(x==1){
-                    return w * x;
-                }else{
-                    return w * potencia(w,potencia(x,y)-1);
-                }
-            }else if(arguments.length == 4){
-                return (w,x,y,z) => `${x} + ${y} + ${potencia(w,x)} + ${z}`;
+            switch(arguments.length){
+                case 0:  
+                    return undefined;
+                    break;
+                case 1:
+                    return w*w;
+                    break;
+                case 2:
+                    if(x==1) {
+                        return w * x;
+                    }else {
+                        return w * potencia(w,x-1);
+                    }
+                    break;
+                case 3:
+                    if(x==1){
+                        return w * x;
+                    }else{
+                        return w * potencia(w,potencia(x,y)-1);
+                    }
+                    break;
+                default:
+                    return (w,x,y,z) => `${x} + ${y} + ${potencia(w,x)} + ${z}`;
             }
         }
 
-
+        console.log(potencia());
         console.log(potencia(2));
         console.log(potencia(2,3));
         console.log(potencia(2,2,2));
         console.log(potencia(2,2,2,2)(2,2,2,2));
         console.log(cuadrado(2));
+
+        function pot(a,b){
+            if(b==1){
+                return a*b;
+            }else{
+                return a* pot(a,b-1);
+            }
+        }
+
+        function power(w,x,y,z){
+            var arr = [undefined, w*w, pot(w,x), () => {return pot(pot(w,x),y)}, () =>{return `${x} + ${y} + ${pot(w,x)} + ${z}`}];
+
+            return arr[arguments.length];
+        }
         
+        console.log(power());
+        console.log(power(2));
+        console.log(power(2,2));
+        //console.log(power(2,2,2));
+        //console.log(power(1,2,3,4));
     </script>
 
 
