--- a/ArbolGenealogico.html
+++ b/ArbolGenealogico.html
@@ -79,9 +79,9 @@
                 hijos: []
         }
         
-        nodoH = buscar(nodoP.hijos,Pepito,1901)
+        nodoH = buscar(nodoP.hijos,"Pepito",1901)
 
-        anadirHijo(nodo.hijos, hijo)
+        anadirHijo(nodoP.hijos, hijo)
 
         console.log(nodoP)
 
