--- a/distritos.html
+++ b/distritos.html
@@ -347,20 +347,27 @@
 
         //Funcion C
         function sumVotos(voto) {
-            console.log(voto)
             return voto.reduce((a,v) => a + v == null || v.votos == null ? 0 : v.votos.reduce((ac, vc) => ac + vc, 0), 0)
         }
 
         console.log("Parte C")
         console.log(sumVotos(idp))
 
-        b = JSON.stringify({a:3, b:"hola"})
+        //Funcion D
+        function votosDistrito(distrito) {
+             return idp.filter(x => x.numd === distrito).reduce((a, v) => a + v == null || v.votos == null ? 0 : v.votos.reduce((ac, vc) => ac + vc,0),0)
+        }
+
+        console.log("Parte D")
+        console.log(votosDistrito(28936))
+        console.log(votosDistrito(28983))
+
+        //Funcion E
+        
+        /*b = JSON.stringify({a:3, b:"hola"})
         console.log(b)
         o = JSON.parse(b)
-        console.log(o)
-
-
-
+        console.log(o)*/
 
     </script>
 </body>
