--- a/html/Actividad1.html
+++ b/html/Actividad1.html
@@ -31,7 +31,7 @@
         <input type="password" id="pwd" onmouseover="lights(1)" onmouseout="lights(0)" onkeypress="login(event)">
         <br>
         <div>
-            <img src="./img/pic_bulbon.gif" alt="bombilla encendida" id="lup" >
+            <img src="../img/pic_bulbon.gif" alt="bombilla encendida" id="lup" >
             <!--<img src="./img/pic_bulboff.gif" alt="bombilla apagada" id="lout">-->
         </div>
     </div>
