--- a/html/arrayMaximo.html
+++ b/html/arrayMaximo.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-</head>
-<body>
-    <script LANGUAGE="JavaScript">
-        var max = 0; 
-        var pos;
+<html lang="en">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Page Title</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
+    </head>
+    <body>
+        <script type="text/javascript">
+            let max = 0;
+            let pos;
         
-        var arr = fillArray(5);
+            const arr = fillArray(5);
 
 
-        for(let i = 0; i < arr; i++){
+            for(let i = 0; i < arr; i++){
             
-        }
-
-        function fillArray(size){
-            var arr = new Array();
-
-            for(let i=0; i<arr.length;i++){
-                arr[i] = Math.floor(Math.random()*26);
             }
 
-            return arr;
-        }
-    </script>
-</body>
+            function fillArray(size){
+                const arr = [];
+
+                for(let i=0; i<arr.length;i++){
+                    arr[i] = Math.floor(Math.random()*26);
+                }
+
+                return arr;
+            }
+        </script>
+    </body>
 </html>
