--- a/html/tetris.html
+++ b/html/tetris.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="../css/tetris.css">
 </head>
 <body>
+<div>
+    <canvas width="240" height="80" class="counter"></canvas>
+    <canvas width="240" height="80" class="score"></canvas>
+</div>
 <canvas width="320" height="640" id="game"></canvas>
+<canvas width="160" height="160" class="storage"></canvas>
 <script src="../js/tetris.js"></script>
 </body>
 </html>
